# LLQQNTInstaller.py

./: README.md  pyproject.toml
llqqntinstaller/: __main__.py  util.py
llqtinstaller/: __main__.py
