[tool.poetry]
name = "llqqntinstaller-py"
version = "0.2.2"
description = ""
authors = ["kaesinol <keiplyer@gmail.com>"]
license = "GPL v3"
readme = "README.md"
packages = [{ include = "llqqntinstaller" }]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.1"
requests = "^2.31.0"
lxml = "^4.9.3"
pygit2 = "^1.12.2"
pysocks = "^1.7.1"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
